--- a/README
+++ b/README
@@ -34,7 +34,7 @@ This website is a hub for:
 - **Frontend:** HTML, CSS, JavaScript, and optionally a framework like React
 - **Backend (if applicable):** Node.js, Express, or Flask.
 - **Hosting:** GitHub Pages, Netlify, or any preferred hosting service.
-- **Other Tools:** FontAwesome for icons, Bootstrap or TailwindCSS for styling.
+- **Other Tools:** FontAwesome for icons, CSS for styling.
 
 ## Setup Instructions
 
