--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 # BriefCase
 
-# Personal Information Site
+# Information Site
 
-Welcome Rent Car Bogota! This site serves as an online e-commerce and a way to showcase my personal and professional Code.
+Welcome Rent Car Bogota! This site serves as an e-commerce and a way to showcase my personal and professional Code.
 
 ## About
 
