--- a/README
+++ b/README
@@ -2,14 +2,12 @@
 
 # Information Site
 
-Welcome Rent Car Bogota! This site serves as an e-commerce and a way to showcase my personal and professional Code.
+Welcome Rent Car Bogota! This site serves as an e-commerce.
 
 ## About
 
 This website is a hub for:
-- Sharing my professional background, skills, and services.
-- Highlighting projects and accomplishments.
-- Providing a central location for networking and contact information.
+- This e-commerce is built with vanilla JavaScript for a local vehicle rental business.
 
 ## Technologies Used
 
