--- a/README
+++ b/README
@@ -6,8 +6,7 @@ Welcome Rent Car Bogota! This site serves as an e-commerce.
 
 ## About
 
-This website is a hub for:
-- This e-commerce is built with vanilla JavaScript for a local vehicle rental business.
+This e-commerce is built with vanilla JavaScript for a local vehicle rental business.
 
 ## Technologies Used
 
@@ -19,5 +18,6 @@ This website is a hub for:
 To set up the project locally, follow these steps:
 
 1. Clone the repository:
+
    ```bash
    git clone https://github.com/NietoDeveloper/RentCar
