--- a/README
+++ b/README
@@ -20,7 +20,7 @@ To set up the project locally, follow these steps:
 1. Clone the repository:
 
    ```bash
-   git clone https://github.com/NietoDeveloper/RentCar
+   git clone 
 
 
    Vanilla JS Website
@@ -35,7 +35,7 @@ Standard HTML structure
 
 Installation
 
-Clone the repository:git clone <repository-url>
+Clone the repository:git clone <https://github.com/NietoDeveloper/RentCar>
 
 
 Open index.html in a web browser.
