--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+## Vanilla JS Website
+
 # E-Commerce
 
 # Information Site
@@ -13,17 +15,6 @@ This e-commerce is built with vanilla JavaScript for a local vehicle rental busi
 - **Frontend:** HTML, CSS, JavaScript
 - **Hosting:** GitHub Pages
 
-## Setup Instructions
-
-To set up the project locally, follow these steps:
-
-1. Clone the repository:
-
-   ```bash
-   git clone 
-
-
-   Vanilla JS Website
 Overview
 A simple, lightweight website built with vanilla JavaScript, CSS, and HTML. No frameworks or dependencies required.
 Features
@@ -32,6 +23,10 @@ Responsive design
 Interactive UI with vanilla JS
 Clean and modular CSS styling
 Standard HTML structure
+
+## Setup Instructions
+
+To set up the project locally, follow these steps:
 
 Installation
 
@@ -48,10 +43,10 @@ Styles are located in the css/ folder.
 
 Project Structure
 ├── index.html        # Main HTML file
-├── css/
-│   └── styles.css    # CSS styles
+├── styles .css       # CSS styles
+│  
 ├── js/
-│   └── main.js       # JavaScript logic
+│   └── app.js       # JavaScript logic
 └── README.md         # This file
 
 Contributing
